Prevented userprofile name to be too long for it's box

--- a/app/assets/stylesheets/users/user_show.scss
+++ b/app/assets/stylesheets/users/user_show.scss
@@ -48,8 +48,9 @@
 
   div {
     font-size: 30px;
-    width: 100%;
     text-align: center;
+    word-wrap: break-word;
+    width: 200px;
   }
 }
 
